<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            android:contentDescription="@string/general_image_description" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/add_by_camera"
            android:layout_marginTop="16dp"
            android:drawablePadding="0dp"
            android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
            android:drawableTint="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/iv_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/add_by_gallery"
            android:layout_marginTop="16dp"
            android:drawablePadding="0dp"
            android:drawableLeft="@drawable/ic_round_image_24"
            android:drawableTint="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/iv_img"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/add_description"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_submit"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>